---
title: SecureCapita - Entity Relationship / Data Model
---
erDiagram
    users ||--o| userroles : "assigned via"
    roles ||--o{ userroles : "granted to"
    users ||--o{ userevents : "performs"
    events ||--o{ userevents : "recorded in"
    users ||--o| accountverifications : "verifies account"
    users ||--o| resetpasswordverifications : "resets password"
    users ||--o| twofactorverifications : "2FA code"
    customer ||--o{ invoice : "billed on"
    invoice ||--o{ invoiceserviceitems : "line items"

    users {
        bigint id PK
        varchar first_name
        varchar last_name
        varchar email UK
        varchar password
        varchar phone
        varchar title
        varchar bio
        tinyint enabled
        tinyint non_locked
        tinyint using_mfa
        datetime created_at
        varchar image_url
        datetime password_changed_at
    }

    roles {
        bigint id PK
        varchar name UK "ROLE_USER / MANAGER / ADMIN / HELP_DESK_ADMIN"
        varchar permission "READ/CREATE/UPDATE/DELETE authorities"
    }

    userroles {
        bigint id PK
        bigint user_id FK,UK
        bigint role_id FK
    }

    events {
        bigint id PK
        varchar type UK "LOGIN_ATTEMPT, PROFILE_UPDATE, MFA_UPDATE ..."
        varchar description
    }

    userevents {
        bigint id PK
        bigint user_id FK
        bigint event_id FK
        varchar device
        varchar ip_address
        datetime created_at
    }

    accountverifications {
        bigint id PK
        bigint user_id FK,UK
        varchar url UK
    }

    resetpasswordverifications {
        bigint id PK
        bigint user_id FK,UK
        varchar url UK
        datetime expiration_date
    }

    twofactorverifications {
        bigint id PK
        bigint user_id FK,UK
        varchar code UK
        datetime expiration_date
    }

    customer {
        bigint id PK
        varchar customer_name
        varchar email
        varchar address
        varchar phoneNumber
        varchar imageUrl
        varchar status "ACTIVE / PENDING / INACTIVE / BANNED"
        varchar type "INDIVIDUAL / ENTERPRISE / CORPORATE / GROUP"
        datetime createdAt
    }

    invoice {
        bigint id PK
        bigint customer FK
        varchar invoiceNumber
        double totalAmount
        varchar status "PAID / ACTIVE / OVERDUE / CANCELED"
        datetime invoiceDate
    }

    invoiceserviceitems {
        bigint id PK
        bigint invoice_id FK
        int item_order
        varchar name
        double price
    }

    services {
        bigint id PK
        varchar name
        varchar description
        double price
    }
